tests/baselines/reference/enumIdenticalIdentifierValues.errors.txt
==== tests/cases/compiler/enumIdenticalIdentifierValues.ts (1 errors) ====
    enum Enum {
        1,
        1.0
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
    }